--- a/myRuleset/gg.ini
+++ b/myRuleset/gg.ini
@@ -17,15 +17,15 @@ ruleset=📲 电报信息,rules/chenxiagua/sub/myRuleset/telegram.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=🚀,[]MATCH
 
-custom_proxy_group=🚀`select`[]🩸`[]♾️`[]DIRECT`^(?!.*[VT]).*$
+custom_proxy_group=🚀`select`[]🩸`[]♾️`[]DIRECT`^(?!.*[V]).*$
 custom_proxy_group=♾️`select`ONE1`ONE2`
-custom_proxy_group=🩸`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🩸`url-test`ONE1`ONE2`^(?!.[V])`http://www.gstatic.com/generate_204300,50
 custom_proxy_group=🈲`select`.*[VT].*
-custom_proxy_group=💸`select`[]🩸`[]DIRECT`^(?!.*[VT]).*$
-custom_proxy_group=📺`select`[]🩸`[]DIRECT`^(?!.*[VT]).*$
-custom_proxy_group=🧠`select`[]🩸`[]DIRECT`^(?!.*[VT]).*$
-custom_proxy_group=🌍`select`[]🩸`[]DIRECT`^(?!.*[VT]).*$
-custom_proxy_group=🐟`select`[]🩸`[]DIRECT`^(?!.*[VT]).*$
+custom_proxy_group=💸`select`[]🩸`[]DIRECT`^(?!.*[V]).*$
+custom_proxy_group=📺`select`[]🩸`[]DIRECT`^(?!.*[V]).*$
+custom_proxy_group=🧠`select`[]🩸`[]DIRECT`^(?!.*[V]).*$
+custom_proxy_group=🌍`select`[]🩸`[]DIRECT`^(?!.*[V]).*$
+custom_proxy_group=🐟`select`[]🩸`[]DIRECT`^(?!.*[V]).*$
 
 
 enable_rule_generator=true
